--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,28 @@
     <title>Стена ВКонтакте</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.css"/>
     <script src="gay.js"></script>
+    <style>
+        .post-list {
+            margin-bottom: 40px;
+        }
+
+        .paginator {
+            padding: 6px;
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: white;
+            border-top: 1px solid black;
+        }
+
+        .paginator .number {
+            display: inline-block;
+            text-align: center;
+            min-width: 60px;
+        }
+    </style>
 </head>
 <body>
 <div id="app"></div>
