+ block.io last transactions

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
             text-align: center;
             min-width: 60px;
         }
+
+        .monospace {
+            font-family:"PT Mono", "Courier New", monospace;
+        }
     </style>
 </head>
 <body>
