--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,15 @@
         }
 
         .monospace {
-            font-family:"PT Mono", "Courier New", monospace;
+            font-family: Menlo, Monaco, "Courier New", monospace;
+            font-size: 12px;
+        }
+
+        .page .refresh {
+            position: absolute;
+            top: 8px;
+            right: 4px;
+            cursor: pointer;
         }
     </style>
 </head>
